[gd_scene load_steps=2 format=3 uid="uid://cbc0ae2sn7j0v"]

[ext_resource type="Script" path="res://Scripts/Interface/ScreenFade.gd" id="1_tyrc6"]

[node name="ScreenFade" type="ColorRect"]
anchors_preset = -1
anchor_left = -0.525
anchor_top = -0.0833333
anchor_right = 1.525
anchor_bottom = 1.08333
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0, 0, 0, 0)
script = ExtResource("1_tyrc6")
